[package]
name = "readline"
version = "0.1.0"
authors = ["adjivas <adjivas@users.noreply.github.com>"]
description = "ffi library of lseek(2) and read(2)"
license = "gpl-3.0"
repository = "https://github.com/adjivas/readline"

[lib]
name = "readline"
path = "src/lib.rs"

[dependencies.libc]
version = "*"
